[package]
name = "example"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
pgpubsub = { path = ".." }
simple_logger = "4.2.0"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
lto = true
overflow-checks = true
opt-level = 3
